# web_crawl_screenshot

./: .gitignore  README.md  config.json  main.py  pyproject.toml  settings.yaml  test_main.py
tests/: __init__.py  test_main.py
web_crawl_screenshot/: __init__.py  main.py
